# drivingschool-metrics-backend

./: .env  .gitignore  Dockerfile  Procfile  docker-compose.yaml  export_auto_20230101_20230131.txt  heroku.yaml  index.html  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
administrative_management/: admin.py
administrative_management/application/: theory_grade_checker.py
administrative_management/migrations/: 0001_initial.py  0002_rename_acquisitionmethods_leadsource.py  0003_alter_language_options_alter_leadsource_options_and_more.py  0004_registrationstate_is_pasive_status.py  0005_rename_is_pasive_status_registrationstate_is_pasive.py  0006_trasnferofregistration_registration_transfer.py  (+14 more)
business/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
code_utils/: apps.py  paginators.py  serializers.py
config/: settings.py  urls.py
dbshell/: apps.py
drivingschool_metrics/: asgi.py  settings.py  urls.py  wsgi.py
drivingschools/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
human_resources/: admin.py  apps.py  models.py
legal/: models.py
locations/: admin.py  models.py  serializers.py  urls.py  views.py
metrics/: admin.py  dgtkey.txt  filters.py  models.py  urls.py  utils.py  views.py
scripts/: deploy.sh  dgt_download_year.sh  pull_year.sh
src/: App.tsx  main.tsx
tests/: admin.py  models.py  serializers.py  urls.py  views.py
users/: models.py  serializers.py  urls.py  views.py
vehicle_fleet/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+110 files in other folders)
